builds/57/log
Started by user [8mha:////4PSaZmWGvGWWeeFFKb0ari3sqR14ubeXg9BUcuwu+gPcAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Running as SYSTEM
Building in workspace /var/jenkins_home/workspace/demo
using credential f85b3e33-62af-482a-9897-1512c5ddeacb
 > /usr/bin/git rev-parse --is-inside-work-tree # timeout=10
Fetching changes from the remote Git repository
 > /usr/bin/git config remote.origin.url https://github.com/AdvaitKukade/Tic-tac-toe-React.git # timeout=10
Fetching upstream changes from https://github.com/AdvaitKukade/Tic-tac-toe-React.git
 > /usr/bin/git --version # timeout=10
using GIT_ASKPASS to set credentials 
 > /usr/bin/git fetch --tags --progress -- https://github.com/AdvaitKukade/Tic-tac-toe-React.git +refs/heads/*:refs/remotes/origin/* # timeout=10
Seen branch in repository origin/development
Seen branch in repository origin/master
Seen 2 remote branches
 > /usr/bin/git show-ref --tags -d # timeout=10
Checking out Revision 6297bf5ca46bc276af08e2262335d4a4d1d172ae (origin/master)
 > /usr/bin/git config core.sparsecheckout # timeout=10
 > /usr/bin/git checkout -f 6297bf5ca46bc276af08e2262335d4a4d1d172ae # timeout=10
Commit message: "Update index.html"
 > /usr/bin/git rev-list --no-walk 6297bf5ca46bc276af08e2262335d4a4d1d172ae # timeout=10
[demo] $ /bin/bash /tmp/jenkins579040340415007373.sh
Some commands here
Unpacking https://nodejs.org/dist/v13.8.0/node-v13.8.0-linux-x64.tar.gz to /var/jenkins_home/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/NodeJS-13.8.0 on Jenkins
[demo] $ /var/jenkins_home/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/NodeJS-13.8.0/bin/node /tmp/jenkins7070676155820247504.js
/tmp/jenkins7070676155820247504.js:1
npm install
    ^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1067:16)
    at Module._compile (internal/modules/cjs/loader.js:1115:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1171:10)
    at Module.load (internal/modules/cjs/loader.js:1000:32)
    at Function.Module._load (internal/modules/cjs/loader.js:899:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
Build step 'Execute NodeJS script' marked build as failure
Publish artifacts to S3 Bucket Build is still running
Publish artifacts to S3 Bucket Using S3 profile: MyS3Profile
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=asset-manifest.json region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=favicon.ico region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=index.html region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=logo192.png region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=logo512.png region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=manifest.json region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=precache-manifest.b17994b21118a923d59b5c09eba83575.js region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=robots.txt region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Publish artifacts to S3 Bucket bucket=yogi-testdb, file=service-worker.js region=ap-south-1, will be uploaded from slave=false managed=false , server encryption false
Finished: FAILURE
